--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -21,7 +21,7 @@ body {
     padding: 0 1em;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Courier New:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
     --bg-color: #1a1a1a;
@@ -35,7 +35,7 @@ body {
 body {
     margin: 0;
     background-color: #1a1a1a;
-    font-family: "Courier New", sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 a {
