--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -154,8 +154,9 @@ a:hover {
 }
 
 .hero-section p {
-    font-weight: 700;
+    font-weight: 500;
     font-size: 16px;
+    text-align: center;
     margin-top: 32px;
     margin-bottom: 0;
     text-shadow: 0px 0px 8px rgba(0,0,0,0.8);
