--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -171,28 +171,28 @@ a:hover {
     align-items: center;
     height: 100vh; /* Full height of the viewport */
     text-align: center;
-    padding: 2em 0;
+    padding: 2px 0;
 }
 
 .body h1 {
-    font-size: 2.5em;
-    margin-bottom: 0.5em;
+    font-size: 15px;
+    margin-bottom: 10px;
 }
 
 .body h3 {
-    font-size: 1.2em;
-    margin-bottom: 1em;
+    font-size: 12px;
+    margin-bottom: 10px;
 }
 
 /* Purple Button Styles */
 .btn-purple {
     background-color: #6a0dad; /* Purple background color */
     color: white;
-    padding: 0.75em 1.5em;
+    padding: 10px 15px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 10px;
     transition: background-color 0.3s, transform 0.3s;
 }
 
