--- a/assets/styles-register.css
+++ b/assets/styles-register.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --bg-color: #111; /* Adjust this if you have a different background color */
     --primary-color: #5cb85c;
     --hover-color: #4cae4c;
     --text-color: #fff;
+    --bg-color: #1a1a1a;
 }
 
 body {
@@ -15,26 +15,9 @@ body {
     color: var(--text-color);
 }
 
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1em;
-}
-
-:root {
-    --bg-color: #1a1a1a;
-}
-
 * {
     font-weight: 500;
     box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    background-color: #1a1a1a;
-    font-family: "Raleway", sans-serif;
-    padding: 10px 0; /* Add this line to set top and bottom padding to 10px */
 }
 
 a {
@@ -167,8 +150,8 @@ a:hover {
 .body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+/*     justify-content: center;
+    align-items: center; */
     height: 100vh; /* Full height of the viewport */
     text-align: center;
     padding: 2px 0;
