--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -27,7 +27,7 @@ body {
 body {
     margin: 0;
     background-color: #1a1a1a;
-    font-family: "Raleway", sans-serif;
+    font-family: "Courier New", sans-serif;
 }
 a {
     color: #fff;
