--- a/assets/styles-rules.css
+++ b/assets/styles-rules.css
@@ -274,7 +274,7 @@ footer h4 {
 .theme-box h3 {
     font-size: 1.8em;
     margin-bottom: 15px; /* Adjusted margin-bottom for title */
-    color: var(--primary-color); /* Title color */
+    color: #fff; /* Title color */
 }
 
 .theme-box p {
